# demo-icp-0805

./: Cargo.toml  dfx.json  package-lock.json  package.json
backend/canisters/users/api/: Cargo.toml  can.did
backend/canisters/users/api/src/lifecycle/: init.rs  post_upgrade.rs
backend/canisters/users/api/src/queries/: post.rs
backend/canisters/users/api/src/updates/: mod.rs  publish_post.rs
backend/canisters/users/impl/: Cargo.toml
backend/canisters/users/impl/src/: lib.rs  memory.rs
backend/canisters/users/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/users/impl/src/model/: post.rs  posts.rs
backend/canisters/users/impl/src/updates/: delete_post.rs  mod.rs
backend/libraries/canister_logger/: Cargo.toml
backend/libraries/canister_time/: Cargo.toml
backend/libraries/serializer/: Cargo.toml
backend/libraries/stable_memory/: Cargo.toml
backend/libraries/types/: can.did
backend/libraries/types/src/: lib.rs  posts.rs
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: env.rs  memory.rs
backend/libraries/utils/src/env/: canister.rs  test.rs
