[workspace]
members = [
    "backend/canisters/users/api",
    "backend/canisters/users/impl",
    "backend/libraries/types",
    "backend/libraries/utils",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.10"
ic-cdk = "0.15.0"
ic-cdk-timers = "0.9.0"
ic-cdk-macros = "0.15.0"
ic-stable-structures = "0.6.5"
serde = "1.0.204"
