[package]
name = "canister_logger"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
canister_time = { path = "../canister_time" }
serde = { workspace = true }
tracing = { workspace = true }
tracing-attributes = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
