[package]
name = "users_canister_impl"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
users_canister_api = { path = "../api" }
types = { path = "../../../libraries/types" }
utils = { path = "../../../libraries/utils" }
